test/Fail/LinearConstructor.err
LinearConstructor.agda:4.4: error: [ParseError]
Unknown attribute: 1
